# dnd_tools

./: Cargo.toml  Next Additions.txt  README.md  README_TUI.md
characters/: Aragorn.txt  Better Character.txt  Bread.txt  Gandalf.txt  TestChar.txt  Tester.txt
npcs/: Orc.txt  TestNPC.txt
src/: character.rs  combat.rs  dice.rs  error_handling.rs  events.rs  file_manager.rs  initiative.rs  input_handler.rs  main.rs  races_classes.rs  search.rs  tests.rs  tui.rs
test_characters/: test.ron
