[package]
name = "dnd_tools"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"
ron = "0.9.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
regex = "1.0"
scraper = "0.20"
html5ever = "0.29"
ratatui = "0.28"
crossterm = "0.28"
